[gd_scene load_steps=2 format=3 uid="uid://cw8j3k5m2pqrs"]

[ext_resource type="Script" path="res://scripts/character_selection.gd" id="1_m4k9p"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4k9p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "SELECT CHARACTERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1Section" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Player1Label" type="Label" parent="VBoxContainer/Player1Section"]
layout_mode = 2
text = "Player 1 Character"
horizontal_alignment = 1

[node name="Player1CharacterPanel" type="PanelContainer" parent="VBoxContainer/Player1Section"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Player1Section/Player1CharacterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Character1Button" type="Button" parent="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Character 1"

[node name="Character2Button" type="Button" parent="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Character 2"

[node name="Character3Button" type="Button" parent="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Character 3"

[node name="Character4Button" type="Button" parent="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Character 4
(Live2D)"

[node name="Player2Section" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Player2Label" type="Label" parent="VBoxContainer/Player2Section"]
layout_mode = 2
text = "Player 2 Character"
horizontal_alignment = 1

[node name="Player2CharacterPanel" type="PanelContainer" parent="VBoxContainer/Player2Section"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Player2Section/Player2CharacterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Character1Button" type="Button" parent="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Character 1"

[node name="Character2Button" type="Button" parent="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Character 2"

[node name="Character3Button" type="Button" parent="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Character 3"

[node name="Character4Button" type="Button" parent="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Character 4
(Live2D)"

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
text = "BACK"

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
text = "START GAME"

[connection signal="pressed" from="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer/HBoxContainer/Character1Button" to="." method="_on_player1_character_selected" binds= [0]]
[connection signal="pressed" from="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer/HBoxContainer/Character2Button" to="." method="_on_player1_character_selected" binds= [1]]
[connection signal="pressed" from="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer/HBoxContainer/Character3Button" to="." method="_on_player1_character_selected" binds= [2]]
[connection signal="pressed" from="VBoxContainer/Player1Section/Player1CharacterPanel/MarginContainer/HBoxContainer/Character4Button" to="." method="_on_player1_character_selected" binds= [3]]
[connection signal="pressed" from="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer/HBoxContainer/Character1Button" to="." method="_on_player2_character_selected" binds= [0]]
[connection signal="pressed" from="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer/HBoxContainer/Character2Button" to="." method="_on_player2_character_selected" binds= [1]]
[connection signal="pressed" from="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer/HBoxContainer/Character3Button" to="." method="_on_player2_character_selected" binds= [2]]
[connection signal="pressed" from="VBoxContainer/Player2Section/Player2CharacterPanel/MarginContainer/HBoxContainer/Character4Button" to="." method="_on_player2_character_selected" binds= [3]]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
